[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/hud/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://graphics/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://source/interface/menu/MenuButton.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Layer1" type="CanvasLayer" parent="."]

[node name="TextureRect" type="ColorRect" parent="Layer1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0745098, 0.12549, 0.372549 )

[node name="NinePatchRect" type="NinePatchRect" parent="Layer1/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="Layer2" type="CanvasLayer" parent="."]
layer = 2

[node name="PopupPanel" type="Panel" parent="Layer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -80.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 160 )
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Layer2/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Layer2/PopupPanel/CenterContainer"]
margin_left = 48.0
margin_top = 52.0
margin_right = 132.0
margin_bottom = 108.0

[node name="Resume" parent="Layer2/PopupPanel/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 84.0
margin_bottom = 26.0
text = "Resume"
grab_focus = true

[node name="Quit" parent="Layer2/PopupPanel/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 30.0
margin_right = 84.0
margin_bottom = 56.0
text = "Quit"
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="Layer2/PopupPanel/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Layer2/PopupPanel/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
